--- a/Movie/views/header.html
+++ b/Movie/views/header.html
@@ -4,7 +4,7 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Movie List </a>
             </div>
-            <form class="navbar-form right">
+            <form class="navbar-form right" data-ng-show="ShowList">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search" ng-model="search">
                     <select name="users" ng-model="order" class="form-control">
