--- a/Movie/content/scss/styles.scss
+++ b/Movie/content/scss/styles.scss
@@ -264,6 +264,7 @@ body {
                 position: absolute;
                 bottom: 1rem;
                 right: 1rem;
+                cursor: pointer;
 
                 @media screen and (min-width:$small-devices) {
                     font-size: 1.5em;
